--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,30 +7,39 @@ on:
       - dev
 
 jobs:
-  build-and-deploy:
+  build-and-test:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main'
 
     steps:
       # 1️⃣ Récupérer le code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Vérifier le HTML (simple check via tidy)
+      # 2️⃣ Vérifier le HTML
       - name: Install tidy
-        run: sudo apt-get install tidy -y
+        run: sudo apt-get update && sudo apt-get install tidy -y
 
       - name: Validate HTML
         run: |
           find . -name "*.html" -exec tidy -qe {} \;
 
-      # 3️⃣ Build Docker (optionnel pour plus tard)
+      # 3️⃣ Build Docker (optionnel)
       - name: Build Docker image
-        run: |
-          docker build -t superweb-ci-cd .
+        run: docker build -t superweb-ci-cd .
 
-      # 4️⃣ Déployer sur GitHub Pages
+  deploy-pages:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
+          force_orphan: true
