--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,25 +1,23 @@
-name: Docker Publish
+name: Deploy to GitHub Pages
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  build-and-push:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Docker image
-        run: docker build -t colombe56/superweb-ci-cd:latest .
-
-      - name: Push Docker image
-        run: docker push colombe56/superweb-ci-cd:latest
+          github_token: ${{ secrets.GH_TOKEN }}
+          publish_dir: ./       # assure-toi que index.html est ici
+          user_name: 'Colombe56'
+          user_email: 'colombe@example.com'
