--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,30 +1,29 @@
-name: Build and Push Docker Image
+name: Build & Push Docker
 
 on:
   release:
-    types: [published]  # Se déclenche à chaque release
-  workflow_dispatch:    # Permet de lancer manuellement
+    types: [published]
 
 jobs:
-  docker:
+  build-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build & Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: colombe56/superweb-ci-cd:latest  # Remplace par ton repo Docker Hub
+          tags: colombe56/superweb-ci-cd:latest
