--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,29 +1,25 @@
-name: Build & Push Docker
+name: Publish Docker Image
 
 on:
   release:
-    types: [published]
+    types: [created]  # Se déclenche à chaque nouvelle release
 
 jobs:
-  build-push:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build & Push Docker Image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: colombe56/superweb-ci-cd:latest
+      - name: Build Docker image
+        run: docker build -t colombe56/superweb-ci-cd:latest .
+
+      - name: Push Docker image
+        run: docker push colombe56/superweb-ci-cd:latest
