--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,18 +2,15 @@ name: Publish Docker Image
 
 on:
   release:
-    types: [published]  # déclenche le workflow à chaque release
+    types: [created]   # se déclenche à chaque nouvelle release
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -21,8 +18,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: colombe56/superweb-ci-cd:latest
+      - name: Build Docker image
+        run: docker build -t colombe56/superweb-ci-cd:latest .
+
+      - name: Push Docker image
+        run: docker push colombe56/superweb-ci-cd:latest
