--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,28 +2,34 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main  # Déclenche le workflow à chaque push sur main
-  workflow_dispatch:  # Permet de déclencher manuellement si besoin
+    branches: ["main"]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Setup Node.js (optionnel si tu builds ton site)
-        uses: actions/setup-node@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          node-version: '18'
-
+          # Upload entire repository
+          path: '.'
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # Token automatique
-          publish_dir: ./  # Répertoire à publier (index.html doit être ici)
-          publish_branch: gh-pages
-          user_name: 'Colombe56'  # Nom pour le commit
-          user_email: 'colombe@example.com'  # Email pour le commit
+        id: deployment
+        uses: actions/deploy-pages@v4
